<resources>
    <string name="app_name">OrderFulfill</string>
    <string name="cont">Continue</string>
    <string name="ok">OK</string>
    <string name="input_required">Input required</string>
    <string name="cancel">Cancel</string>
    <string name="api_key_missing">Access token is not set or you need to log in again. Press try again to continue.</string>
    <string name="error">Error!</string>
    <string name="try_again">Try again</string>
    <string name="loading_unfulfilled_orders">Loading unfulfilled orders</string>
    <string name="oauth_forged_request">Possibly forged login request. Please go back and try again</string>
    <string name="oauth_access_token_fail">Could not confirm token validity. Please go back and try again</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="order_for">Order for %1$s</string>
    <string name="created">Created</string>
    <string name="payment_status">Payment status</string>
    <string name="product_cost">Cost</string>
    <string name="item_count">Items</string>
    <string name="dollar_amount">$%1$s</string>
    <string name="platform_unfulfilled_orders">%1$s: \n%2$s unfulfilled orders</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="variant">Variant</string>
    <string name="shipping_options">Shipping options</string>
    <string name="package_type">Package type</string>
    <string name="package_weight">Package weight (g)</string>
    <string name="paid_for_shipping">Customer-paid shipping cost</string>
    <string name="address">Destination address</string>
    <string name="shipping_provider">Shipping provider</string>
    <string name="shipping_setup">Shipping setup</string>
    <string name="package_types">Packaging options</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="type">Type</string>
    <string name="cm_amount">%1$s cm</string>
    <string name="cm_amount_f">%1$.2f cm</string>
    <string name="pkg_name">New package name</string>
    <string name="add">Add</string>
    <string name="pkg_name_cannot_be_empty">New package name cannot be empty</string>
    <string name="pkg_dims_invalid">Package dimensions are invalid. Make sure you\'re entering positive numbers</string>
    <string name="shipping_provider_setup">Shipping provider setup</string>
    <string name="package_contents">Package contents</string>
    <string name="select_pkg_type">Add and then select a package type</string>
    <string name="pkg_weight_invalid">Package weight is invalid. Make sure you\'re entering a positive non-decimal number</string>
    <string name="loading_shipping_rates">Loading shipping rates</string>
    <string name="insured">Insured</string>
    <string name="buying_rate">Updating tracking and paying for shipping</string>
    <string name="buying_rate_failed">Failed to pay for shipment and generate shipping label</string>
    <string name="tracking_update_failed">Failed to update tracking number</string>
    <string name="add_new_printer">Add a new printer</string>
    <string name="print">Print</string>
    <string name="done">Done</string>
    <string name="printing">Printing in progress</string>
    <string name="printing_failed">Printing failed. Check the printer and try again.</string>
    <string name="printer_name">Printer name</string>
    <string name="printer_ip">Printer IP</string>
    <string name="printer_list">Saved printers</string>
    <string name="give_api_key_chitchats">ChitChats API key</string>
    <string name="give_shipper_id_chitchats">ChitChats shipper ID</string>
    <string name="give_api_key_shopify">Shopify API key</string>
    <string name="give_shop_id_shopify">Shopify store ID</string>
    <string name="standard">Standard</string>
    <string name="no_shipping_options">No shipping options found, try another provider</string>
</resources>